# disel

./: .gitignore  .travis-ci.sh  .travis.yml  LICENSE  Makefile  README.md  _CoqProject  coq-disel-calculator.opam  coq-disel-examples.opam  coq-disel-tpc.opam  coq-disel.opam  descr  dune-project  meta.yml  opam
.github/workflows/: docker-action.yml
Core/: Actions.v  ActionsHeap.v  Always.v  DepMaps.v  DiSeLExtraction.v  Domain.v  Freshness.v  HoareTriples.v  Hooks.v  InductiveInv.v  InferenceRules.v  Injection.v  InjectionGeneralized.v  Make  Makefile  NetworkSem.v  NewStatePredicates.v  Process.v  Process1.v  Protocols.v  Rely.v  State.v  StatePredicates.v  While.v  Worlds.v  opam
Examples/: Make  SeqLib.v
Examples/Calculator/: CalculatorClientLib.v  CalculatorExtraction.v  CalculatorInvariant.v  CalculatorProtocol.v  CalculatorServerLib.v  DelegatingCalculatorServer.v  SimpleCalculatorApp.v  SimpleCalculatorServers.v
Examples/Greeter/: Greeter.v
Examples/LockResource/: LockInductiveInvariant.v  LockPrograms.v  LockProtocol.v  LockResourceHooked.v  LockSmallWorld.v  ResourceProtocol.v
Examples/Querying/: QueryHooked.v  QueryHookedRely.v  QueryPlusTPC.v  QueryProtocol.v
Examples/TwoPhaseCommit/: SimpleTPCApp.v  TwoPhaseClient.v  TwoPhaseCoordinator.v  TwoPhaseExtraction.v  TwoPhaseInductiveInv.v  TwoPhaseInductiveProof.v  TwoPhaseParticipant.v  TwoPhaseProtocol.v
Heaps/: Make  Makefile  coding.v  descr  domain.v  finmap.v  heap.v  idynamic.v  opam  pcm.v  pperm.v  prelude.v  spcm.v  unionmap.v
extraction/TPC/: TwoPhaseExtraction.v
extraction/calculator/: CalculatorExtraction.v
scripts/: calculator.sh  tpc.sh
shims/: Debug.ml  DiSeL.ml  Shim.ml  TPCMain.ml
theories/Core/: Actions.v  DepMaps.v  DiSeLExtraction.v  EqTypeX.v  Freshness.v  HoareTriples.v  InductiveInv.v  Injection.v  NetworkSem.v  NewStatePredicates.v  Process.v  Protocols.v  Rely.v  State.v  StatePredicates.v  Worlds.v  dune
theories/Examples/: SeqLib.v  dune
theories/Examples/Calculator/: CalculatorClientLib.v  CalculatorInvariant.v  CalculatorProtocol.v  CalculatorServerLib.v  DelegatingCalculatorServer.v  SimpleCalculatorApp.v  SimpleCalculatorServers.v
theories/Examples/Greeter/: Greeter.v
theories/Examples/LockResource/: LockProtocol.v  ResourceProtocol.v
theories/Examples/Querying/: QueryPlusTPC.v  QueryProtocol.v
theories/Examples/TwoPhaseCommit/: SimpleTPCApp.v  TwoPhaseClient.v  TwoPhaseCoordinator.v  TwoPhaseInductiveInv.v  TwoPhaseInductiveProof.v  TwoPhaseParticipant.v  TwoPhaseProtocol.v
