opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/DistributedComponents/disel"
dev-repo: "git+https://github.com/DistributedComponents/disel.git"
bug-reports: "https://github.com/DistributedComponents/disel/issues"
license: "BSD-2-Clause"
synopsis: "Example systems for Disel, a separation-style logic for compositional verification of distributed systems in Coq"

build: [make "-j%{jobs}%" "-C" "Examples"]
install: [make "-C" "Examples" "install"]
depends: [
  "ocaml"
  "coq" {(>= "8.11" & < "8.13~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.10.0" & < "1.12~") | (= "dev")}
  "coq-fcsl-pcm" {(>= "1.3.0" & < "1.4.0") | (= "dev")}
  "coq-disel" {= version}
]

tags: [
  "category:Computer Science/Concurrent Systems and Protocols/Theory of concurrent systems"
  "keyword:program verification"
  "keyword:separation logic"
  "keyword:distributed algorithms"
  "logpath:DiSeL"
]
authors: [
  "Ilya Sergey"
  "James R. Wilcox"
]
