opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/DistributedComponents/disel"
dev-repo: "git+https://github.com/DistributedComponents/disel.git"
bug-reports: "https://github.com/DistributedComponents/disel/issues"
license: "BSD-2-Clause"
synopsis: "Two-phase commit implemented in Disel, a separation-style logic for compositional verification of distributed systems in Coq"

build: [make "-j%{jobs}%" "tpc"]
depends: [
  "ocaml" {>= "4.05.0"}
  "coq" {>= "8.14"}
  "coq-mathcomp-ssreflect" {>= "1.13" & < "2.0"}
  "coq-fcsl-pcm" {>= "1.7.0"}
  "coq-htt" {>= "1.2.0"}
  "ocamlbuild" {build}
]

authors: [
  "Ilya Sergey"
  "James R. Wilcox"
]
