opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/DistributedComponents/disel"
dev-repo: "git+https://github.com/DistributedComponents/disel.git"
bug-reports: "https://github.com/DistributedComponents/disel/issues"
license: "BSD-2-Clause"
synopsis: "Core framework files for Disel, a separation-style logic for compositional verification of distributed systems in Coq"

build: [ make "-j" "%{jobs}%" "-C" "Core" ]
install: [ make "-C" "Core" "install" ]
remove: [ "sh" "-c" "rm -rf '%{lib}%/coq/user-contrib/DiSeL'" ]
depends: [
  "ocaml"
  "coq" {>= "8.7" & < "8.10~"}
  "coq-mathcomp-ssreflect" {>= "1.6.2" & < "1.9~"}
  "coq-fcsl-pcm"
]
flags: light-uninstall

tags: [
  "category:Computer Science/Concurrent Systems and Protocols/Theory of concurrent systems"
  "keyword:program verification"
  "keyword:separation logic"
  "keyword:distributed algorithms"
  "logpath:DiSeL"
]
authors: [
  "Ilya Sergey"
  "James R. Wilcox"
]
