(coq.theory
 (name DiSeL.Examples)
 (package coq-disel-examples)
 (synopsis "Example systems for Disel, a separation-style logic for compositional verification of distributed systems in Coq")
 (flags :standard
   -w -notation-overridden
   -w -local-declaration
   -w -redundant-canonical-projection
   -w -projection-no-head-constant))

(include_subdirs qualified)
